{
    "name": "StrategyGameInputAction",
    "maps": [
        {
            "name": "InGame",
            "id": "a954a778-7f0f-4672-ad70-418a10c0d581",
            "actions": [
                {
                    "name": "Select",
                    "type": "Value",
                    "id": "835adcdb-febc-4623-85e3-276c40ad7c12",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Command",
                    "type": "Button",
                    "id": "3374873a-7044-4c94-94dc-434ed7b9ca51",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "2bbf7599-3889-412f-a5e6-5bb5d76c1a11",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MultipleSelection",
                    "type": "Button",
                    "id": "ee490990-ec0d-4b10-a363-fda57ddde0fa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AttackMode",
                    "type": "Button",
                    "id": "1e676dbd-a438-4f20-a2d8-9866fc6a9bd0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CancelCommanding",
                    "type": "Button",
                    "id": "00ce3275-d3c4-4e0e-b0bf-fce83acc2f79",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenMenu",
                    "type": "Button",
                    "id": "faa99307-5740-4d3a-b7e1-5b07024c0ff8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b6f91c36-0552-4c79-af41-d04cf1c41d67",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseAndKeyboard",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ba8c6f3e-48d2-48b2-8267-78ae1e67f274",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseAndKeyboard",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c05ecc57-3827-49d9-9901-2a3c299071d3",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseAndKeyboard",
                    "action": "MultipleSelection",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "da986888-794d-4669-951a-7aec514aac81",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseAndKeyboard",
                    "action": "AttackMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7f48e2b6-ce6b-4a1d-be97-8081e0da91e9",
                    "path": "<Keyboard>/f1",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseAndKeyboard",
                    "action": "CancelCommanding",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d1c3965e-2af7-47a3-9ecd-03b56911aa5d",
                    "path": "<Keyboard>/f1",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseAndKeyboard",
                    "action": "OpenMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "79af832a-4001-4fa0-b71e-a074e2d32b46",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseAndKeyboard",
                    "action": "Command",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "MouseAndKeyboard",
            "bindingGroup": "MouseAndKeyboard",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}